--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -1,6 +1,6 @@
 [supervisord]
 nodaemon = true
-environment = GRAPHITE_STORAGE_DIR='/var/lib/graphite/storage',GRAPHITE_CONF_DIR='/var/lib/graphite/conf'
+environment = GRAPHITE_STORAGE_DIR='/src/graphite/storage',GRAPHITE_CONF_DIR='/src/graphite/conf'
 
 [program:nginx]
 command = /usr/sbin/nginx
@@ -10,15 +10,15 @@ autorestart = true
 
 [program:carbon-cache]
 user = www-data
-command = /var/lib/graphite/bin/carbon-cache.py --debug start
+command = /src/graphite/bin/carbon-cache.py --debug start
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
 autorestart = true
 
 [program:graphite-webapp]
 user = www-data
-directory = /var/lib/graphite/webapp
-environment = PYTHONPATH='/var/lib/graphite/webapp'
+directory = /src/graphite/webapp
+environment = PYTHONPATH='/src/graphite/webapp'
 command = /usr/bin/gunicorn_django -b127.0.0.1:8000
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
