--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -69,6 +69,8 @@ http {
   
   server {
     listen 9201 default_server;
+    auth_basic "Restricted";
+    auth_basic_user_file /etc/nginx/htpasswd;
 
     location / {
         proxy_pass                 http://127.0.0.1:9200/;
