--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -37,3 +37,10 @@ command = /usr/local/bin/run_elasticsearch
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
 autorestart = true
+
+[program:seyren]
+environment = GRAPHITE_URL="0.0.0.0:8080",HUBOT_URL="http://54.72.251.34:8080"
+command = /usr/bin/java -jar /src/seyren-1.1.0.jar -httpPort=8888
+stdout_logfile = /var/log/supervisor/%(program_name)s.log
+stderr_logfile = /var/log/supervisor/%(program_name)s.log
+autorestart = true
