--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -66,6 +66,35 @@ http {
         proxy_temp_file_write_size 64k;
     }
   }
+
+  server {
+    listen 8888 default_server;
+    server_name _;
+    auth_basic "Restricted";
+    auth_basic_user_file /etc/nginx/htpasswd;
+
+    location / {
+        proxy_pass                 http://127.0.0.1:9000/;
+        proxy_set_header           X-Real-IP   $remote_addr;
+        proxy_set_header           X-Forwarded-For  $proxy_add_x_forwarded_for;
+        proxy_set_header           X-Forwarded-Proto  $scheme;
+        proxy_set_header           X-Forwarded-Server  $host;
+        proxy_set_header           X-Forwarded-Host  $host;
+        proxy_set_header           Host  $host;
+
+        client_max_body_size       10m;
+        client_body_buffer_size    128k;
+
+        proxy_connect_timeout      90;
+        proxy_send_timeout         90;
+        proxy_read_timeout         90;
+
+        proxy_buffer_size          4k;
+        proxy_buffers              4 32k;
+        proxy_busy_buffers_size    64k;
+        proxy_temp_file_write_size 64k;
+    }
+  }
   
   server {
     listen 9201 default_server;
