--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -45,8 +45,8 @@ stderr_logfile=/var/log/supervisor/%(program_name)s.log
 autorestart=true
 
 [program:seyren]
-environment = GRAPHITE_URL="0.0.0.0:8080",HUBOT_URL="http://54.72.251.34:8080"
-command = /usr/bin/java -jar /src/seyren-1.1.0.jar -httpPort=8888
+environment = GRAPHITE_URL="0.0.0.0:8080",HUBOT_URL="http://54.72.251.34:8080",GRAPHITE_USERNAME="",GRAPHITE_PASSWORD=""
+command = /usr/bin/java -jar /src/seyren-1.1.0.jar -httpPort=9000
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
 autorestart = true
