--- a/graphite/storage-schemas.conf
+++ b/graphite/storage-schemas.conf
@@ -1,7 +1,7 @@
 [carbon]
 pattern = ^carbon\..*
-retentions = 1m:31d,10m:1y,1h:5y
+retentions = 1m:31d
 
 [default]
 pattern = .*
-retentions = 10s:8d,1m:31d,10m:1y,1h:5y
+retentions = 10s:7d,30s:14d,1m:31d
