--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -39,12 +39,14 @@ http {
   }
 
   server {
-    listen 81 default_server;
-    server_name _;
-    auth_basic "Restricted";
-    auth_basic_user_file /etc/nginx/htpasswd;
+    listen 81;
+    server_name graphite.frontend;
 
     location / {
+	add_header 'Access-Control-Allow-Origin' 'http://54.76.110.149';
+	add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'origin, authorization, accept, content-type';
+
         proxy_pass                 http://127.0.0.1:8000/;
         proxy_set_header           X-Real-IP   $remote_addr;
         proxy_set_header           X-Forwarded-For  $proxy_add_x_forwarded_for;
@@ -52,18 +54,11 @@ http {
         proxy_set_header           X-Forwarded-Server  $host;
         proxy_set_header           X-Forwarded-Host  $host;
         proxy_set_header           Host  $host;
-
-        client_max_body_size       10m;
-        client_body_buffer_size    128k;
-
-        proxy_connect_timeout      90;
-        proxy_send_timeout         90;
-        proxy_read_timeout         90;
-
-        proxy_buffer_size          4k;
-        proxy_buffers              4 32k;
-        proxy_busy_buffers_size    64k;
-        proxy_temp_file_write_size 64k;
+        
+        if ($request_method = 'OPTIONS' ) {
+            # if request method is options we immediately return with 200 OK.
+            return 200;
+        }
     }
   }
 
