--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -2,6 +2,12 @@
 nodaemon = true
 environment = GRAPHITE_STORAGE_DIR='/src/graphite/storage',GRAPHITE_CONF_DIR='/src/graphite/conf'
 
+[program:nginx]
+command = /usr/sbin/nginx
+stdout_logfile = /var/log/supervisor/%(program_name)s.log
+stderr_logfile = /var/log/supervisor/%(program_name)s.log
+autorestart = true
+
 [program:carbon-cache]
 user = www-data
 command = /src/graphite/bin/carbon-cache.py start
