Setup SSL with client certificate authentication

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,14 +27,14 @@ http {
   gzip_disable "msie6";
 
   server {
-    listen 80 default_server;
+    listen 443 ssl;
     server_name iplayer.io;
 
-    ssl on;
     ssl_certificate         /etc/nginx/ssl/server.crt;
     ssl_certificate_key     /etc/nginx/ssl/server.key;
     ssl_client_certificate  /etc/nginx/ssl/ca.pem;
     ssl_verify_client on;
+    ssl_verify_depth 3;
 
     location / {
       root /src/grafana;
@@ -43,8 +43,14 @@ http {
   }
 
   server {
-    listen 81;
-    server_name graphite.frontend;
+    listen 81 ssl;
+    server_name iplayer.io;
+
+    ssl_certificate         /etc/nginx/ssl/server.crt;
+    ssl_certificate_key     /etc/nginx/ssl/server.key;
+    ssl_client_certificate  /etc/nginx/ssl/ca.pem;
+    ssl_verify_client on;
+    ssl_verify_depth 3;
 
     location / {
       add_header 'Access-Control-Allow-Origin' 'https://iplayer.io';
@@ -69,7 +75,7 @@ http {
 
   server {
     listen 82 default_server;
-    server_name _;
+    server_name iplayer.io;
     auth_basic "Restricted";
     auth_basic_user_file /etc/nginx/htpasswd;
 
