--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 daemon off;
 user www-data;
-worker_processes 1;
+worker_processes 2;
 pid /var/run/nginx.pid;
 
 events {
@@ -10,7 +10,6 @@ events {
 http {
   sendfile on;
   tcp_nopush on;
-  tcp_nodelay on;
   keepalive_timeout 65;
   types_hash_max_size 2048;
   server_tokens off;
@@ -36,28 +35,7 @@ http {
     ssl_verify_client on;
     ssl_verify_depth 3;
 
-    location / {
-      root /src/grafana;
-      index index.html;
-    }
-  }
-
-  server {
-    listen 81 ssl;
-    server_name iplayer.io;
-
-    ssl_certificate         /etc/nginx/ssl/server.crt;
-    ssl_certificate_key     /etc/nginx/ssl/server.key;
-    ssl_client_certificate  /etc/nginx/ssl/ca.pem;
-    ssl_verify_client on;
-    ssl_verify_depth 3;
-
-    location / {
-      add_header 'Access-Control-Allow-Origin' 'https://iplayer.io';
-      add_header 'Access-Control-Allow-Credentials' 'true';
-      add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
-      add_header 'Access-Control-Allow-Headers' 'origin, authorization, accept, content-type';
-
+    location /graphite {
       proxy_pass                 http://127.0.0.1:8000/;
       proxy_set_header           X-Real-IP   $remote_addr;
       proxy_set_header           X-Forwarded-For  $proxy_add_x_forwarded_for;
@@ -65,21 +43,9 @@ http {
       proxy_set_header           X-Forwarded-Server  $host;
       proxy_set_header           X-Forwarded-Host  $host;
       proxy_set_header           Host  $host;
-
-      if ($request_method = 'OPTIONS' ) {
-          # if request method is options we immediately return with 200 OK.
-          return 200;
-      }
     }
-  }
 
-  server {
-    listen 82 default_server;
-    server_name iplayer.io;
-    auth_basic "Restricted";
-    auth_basic_user_file /etc/nginx/htpasswd;
-
-    location / {
+    location /seyren {
       proxy_pass                 http://127.0.0.1:9000/;
       proxy_set_header           X-Real-IP   $remote_addr;
       proxy_set_header           X-Forwarded-For  $proxy_add_x_forwarded_for;
@@ -87,18 +53,11 @@ http {
       proxy_set_header           X-Forwarded-Server  $host;
       proxy_set_header           X-Forwarded-Host  $host;
       proxy_set_header           Host  $host;
+    }
 
-      client_max_body_size       10m;
-      client_body_buffer_size    128k;
-
-      proxy_connect_timeout      90;
-      proxy_send_timeout         90;
-      proxy_read_timeout         90;
-
-      proxy_buffer_size          4k;
-      proxy_buffers              4 32k;
-      proxy_busy_buffers_size    64k;
-      proxy_temp_file_write_size 64k;
+    location / {
+      root /src/grafana;
+      index index.html;
     }
   }
 
