--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -76,8 +76,12 @@ http {
   server {
     listen 82 default_server;
     server_name iplayer.io;
-    auth_basic "Restricted";
-    auth_basic_user_file /etc/nginx/htpasswd;
+
+    ssl_certificate         /etc/nginx/ssl/server.crt;
+    ssl_certificate_key     /etc/nginx/ssl/server.key;
+    ssl_client_certificate  /etc/nginx/ssl/ca.pem;
+    ssl_verify_client on;
+    ssl_verify_depth 3;
 
     location / {
       proxy_pass                 http://127.0.0.1:9000/;
@@ -104,6 +108,12 @@ http {
 
   server {
     listen 9201 default_server;
+
+    ssl_certificate         /etc/nginx/ssl/server.crt;
+    ssl_certificate_key     /etc/nginx/ssl/server.key;
+    ssl_client_certificate  /etc/nginx/ssl/ca.pem;
+    ssl_verify_client on;
+    ssl_verify_depth 3;
 
     location / {
       proxy_pass                 http://127.0.0.1:9200/;
