--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,6 +27,13 @@ http {
   gzip_disable "msie6";
 
   server {
+    listen 80;
+    server_name *.iplayer.io;
+
+    return 301 https://iplayer.io$request_uri;
+  }
+
+  server {
     listen 443 ssl;
     server_name iplayer.io;
 
@@ -55,8 +62,8 @@ http {
     location / {
       add_header 'Access-Control-Allow-Origin' 'https://iplayer.io';
       add_header 'Access-Control-Allow-Credentials' 'true';
-      add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
-      add_header 'Access-Control-Allow-Headers' 'origin, authorization, accept, content-type';
+      add_header 'Access-Control-Allow-Methods' '*';
+      add_header 'Access-Control-Allow-Headers' '*';
 
       proxy_pass                 http://127.0.0.1:8000/;
       proxy_set_header           X-Real-IP   $remote_addr;
@@ -74,7 +81,7 @@ http {
   }
 
   server {
-    listen 82 default_server;
+    listen 82 ssl;
     server_name iplayer.io;
 
     ssl_certificate         /etc/nginx/ssl/server.crt;
@@ -107,7 +114,8 @@ http {
   }
 
   server {
-    listen 9201 default_server;
+    listen 9201 ssl;
+    server_name iplayer.io;
 
     ssl_certificate         /etc/nginx/ssl/server.crt;
     ssl_certificate_key     /etc/nginx/ssl/server.key;
