--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -55,14 +55,11 @@ http {
 
     ssl_certificate         /etc/nginx/ssl/server.crt;
     ssl_certificate_key     /etc/nginx/ssl/server.key;
-    ssl_client_certificate  /etc/nginx/ssl/ca.pem;
-    ssl_verify_client on;
-    ssl_verify_depth 3;
 
     location / {
       add_header 'Access-Control-Allow-Origin' 'https://iplayer.io';
       add_header 'Access-Control-Allow-Credentials' 'true';
-      add_header 'Access-Control-Allow-Methods' '*';
+      add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
       add_header 'Access-Control-Allow-Headers' '*';
 
       proxy_pass                 http://127.0.0.1:8000/;
@@ -119,9 +116,6 @@ http {
 
     ssl_certificate         /etc/nginx/ssl/server.crt;
     ssl_certificate_key     /etc/nginx/ssl/server.key;
-    ssl_client_certificate  /etc/nginx/ssl/ca.pem;
-    ssl_verify_client on;
-    ssl_verify_depth 3;
 
     location / {
       proxy_pass                 http://127.0.0.1:9200/;
