--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -60,7 +60,7 @@ http {
       add_header 'Access-Control-Allow-Origin' 'https://iplayer.io';
       add_header 'Access-Control-Allow-Credentials' 'true';
       add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-      add_header 'Access-Control-Allow-Headers' '*';
+      add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
 
       proxy_pass                 http://127.0.0.1:8000/;
       proxy_set_header           X-Real-IP   $remote_addr;
@@ -74,6 +74,8 @@ http {
           # if request method is options we immediately return with 200 OK.
           return 200;
       }
+      auth_basic 'Restricted';
+      auth_basic_user_file /etc/nginx/ssl/htpasswd;
     }
   }
 
