--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -50,11 +50,11 @@ http {
   }
 
   server {
-    listen 81 ssl;
-    server_name iplayer.io;
+    listen 443 ssl;
+    server_name graphite.iplayer.io;
 
-    ssl_certificate         /etc/nginx/ssl/server.crt;
-    ssl_certificate_key     /etc/nginx/ssl/server.key;
+    ssl_certificate         /etc/nginx/ssl/graphite.iplayer.io.crt;
+    ssl_certificate_key     /etc/nginx/ssl/graphite.iplayer.io.key;
 
     location / {
       add_header 'Access-Control-Allow-Origin' 'https://iplayer.io';
