--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -31,3 +31,8 @@ stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
 autorestart = true
 
+[program:memcached]
+command = /usr/bin/memcached
+stdout_logfile = /var/log/supervisor/%(program_name)s.log
+stderr_logfile = /var/log/supervisor/%(program_name)s.log
+autorestart = true
