Run memcache as memcache user

--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -32,6 +32,7 @@ stderr_logfile = /var/log/supervisor/%(program_name)s.log
 autorestart = true
 
 [program:memcached]
+user = memcache
 command = /usr/bin/memcached
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
