--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -108,4 +108,37 @@ http {
       proxy_temp_file_write_size 64k;
     }
   }
+
+  server {
+    listen 82 ssl;
+    server_name iplayer.io;
+
+    ssl_certificate         /etc/nginx/ssl/server.crt;
+    ssl_certificate_key     /etc/nginx/ssl/server.key;
+    ssl_client_certificate  /etc/nginx/ssl/ca.pem;
+    ssl_verify_client on;
+    ssl_verify_depth 3;
+
+    location / {
+      proxy_pass                 http://127.0.0.1:9000/;
+      proxy_set_header           X-Real-IP   $remote_addr;
+      proxy_set_header           X-Forwarded-For  $proxy_add_x_forwarded_for;
+      proxy_set_header           X-Forwarded-Proto  $scheme;
+      proxy_set_header           X-Forwarded-Server  $host;
+      proxy_set_header           X-Forwarded-Host  $host;
+      proxy_set_header           Host  $host;
+
+      client_max_body_size       10m;
+      client_body_buffer_size    128k;
+
+      proxy_connect_timeout      90;
+      proxy_send_timeout         90;
+      proxy_read_timeout         90;
+
+      proxy_buffer_size          4k;
+      proxy_buffers              4 32k;
+      proxy_busy_buffers_size    64k;
+      proxy_temp_file_write_size 64k;
+    }
+  }
 }
