--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -37,3 +37,16 @@ command = /usr/bin/memcached
 stdout_logfile = /var/log/supervisor/%(program_name)s.log
 stderr_logfile = /var/log/supervisor/%(program_name)s.log
 autorestart = true
+
+[program:mongod]
+command = /usr/bin/mongod
+stdout_logfile=/var/log/supervisor/%(program_name)s.log
+stderr_logfile=/var/log/supervisor/%(program_name)s.log
+autorestart=true
+
+[program:seyren]
+environment = GRAPHITE_URL="0.0.0.0:8000",HUBOT_URL="http://54.72.251.34:8080",GRAPHITE_USERNAME="",GRAPHITE_PASSWORD=""
+command = /usr/bin/java -jar /src/seyren-1.1.0.jar -httpPort=9000
+stdout_logfile = /var/log/supervisor/%(program_name)s.log
+stderr_logfile = /var/log/supervisor/%(program_name)s.log
+autorestart = true
