Update and install dependencies in separate steps

--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,7 +1,8 @@
 FROM ubuntu
 
-RUN     apt-get -y update &&\
-        apt-get -y install wget
+RUN     apt-get -y update
+
+RUN     apt-get -y install wget
 
 # Install grafana
 RUN     cd /tmp &&\
