Move certificates into shared directory

--- a/grafana/config/nginx.conf
+++ b/grafana/config/nginx.conf
@@ -36,9 +36,9 @@ http {
     listen 443 ssl;
     server_name iplayer.io;
 
-    ssl_certificate         /etc/nginx/ssl/server.crt;
-    ssl_certificate_key     /etc/nginx/ssl/server.key;
-    ssl_client_certificate  /etc/nginx/ssl/ca.pem;
+    ssl_certificate         /certificates/server.crt;
+    ssl_certificate_key     /certificates/server.key;
+    ssl_client_certificate  /certificates/ca.pem;
     ssl_verify_client on;
     ssl_verify_depth 3;
 
