--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -15,3 +15,4 @@ ADD     config/config.js /src/grafana/config.js
 COPY    config/nginx.conf /etc/nginx/nginx.conf
 
 VOLUME  ["/data"]
+VOLUME  ["/certificates"]
