--- a/carbon/config/carbon.conf
+++ b/carbon/config/carbon.conf
@@ -1,10 +1,10 @@
 [cache]
-LOCAL_DATA_DIR = /src/graphite/storage/whisper/
+LOCAL_DATA_DIR = /data/whisper/
 
 # Specify the user to drop privileges to
 # If this is blank carbon runs as the user that invokes it
 # This user must have write access to the local data directory
-USER = 
+USER =
 
 # Limit the size of the cache to avoid swapping or becoming CPU bound.
 # Sorts and serving cache queries gets more expensive as the cache grows.
