--- a/carbon/config/supervisord.conf
+++ b/carbon/config/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon = true
 
 [program:carbon-cache]
-command = /src/graphite/bin/carbon-cache.py start
-stdout_logfile = /data/log/%(program_name)s.log
-stderr_logfile = /data/log/%(program_name)s.log
+command = /src/carbon/bin/carbon-cache.py start
+stdout_logfile = /var/log/%(program_name)s.log
+stderr_logfile = /var/log/%(program_name)s.log
 autorestart = true
