Create docker file

--- a/graphite/Dockerfile
+++ b/graphite/Dockerfile
@@ -15,7 +15,8 @@ RUN     pip install --install-option="--prefix=/src/graphite" --install-option="
 # Setup graphite
 COPY    config/local_settings.py /src/graphite/webapp/graphite/local_settings.py
 
-RUN     touch /data/graphite/graphite.db /data/graphite/index &&\
+RUN     mkdir /data/graphite &&\
+        touch /data/graphite/graphite.db /data/graphite/index &&\
         chown -R www-data /data/graphite &&\
         chmod 0775 /data/graphite &&\
         chmod 0664 /data/graphite/graphite.db &&\
