Add supervisord file to the right location

--- a/graphite/Dockerfile
+++ b/graphite/Dockerfile
@@ -14,7 +14,7 @@ RUN     pip install --install-option="--prefix=/src/graphite" --install-option="
 
 # Setup graphite
 COPY    config/local_settings.py /src/graphite/webapp/graphite/local_settings.py
-COPY    config/supervisord.conf /etc/supervisord/supervisord.conf
+COPY    config/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 RUN     mkdir -p /data/graphite &&\
         touch /data/graphite/graphite.db /data/graphite/index &&\
