--- a/graphite/config/supervisord.conf
+++ b/graphite/config/supervisord.conf
@@ -1,5 +1,6 @@
 [supervisord]
 nodaemon = true
+environment = GRAPHITE_STORAGE_DIR='/data/carbon',GRAPHITE_CONF_DIR='/src/graphite/conf'
 
 [program:graphite-webapp]
 user = www-data
