We need whisper

--- a/graphite/Dockerfile
+++ b/graphite/Dockerfile
@@ -9,7 +9,8 @@ RUN     apt-get -y install  python-django-tagging python-simplejson python-memca
                             git memcached
 
 # Install graphite
-RUN     pip install --install-option="--prefix=/src/graphite" --install-option="--install-lib=/src/graphite/webapp" git+git://github.com/graphite-project/graphite-web@0.9.x
+RUN     pip install git+git://github.com/graphite-project/whisper@0.9.x &&\
+        pip install --install-option="--prefix=/src/graphite" --install-option="--install-lib=/src/graphite/webapp" git+git://github.com/graphite-project/graphite-web@0.9.x
 
 # Setup graphite
 COPY    config/initial_data.json /src/graphite/webapp/graphite/initial_data.json
