--- a/grafana/config/nginx/nginx.conf
+++ b/grafana/config/nginx/nginx.conf
@@ -17,6 +17,8 @@ http {
   server_names_hash_bucket_size 32;
 
   include /etc/nginx/mime.types;
+  include /etc/nginx/sites-enabled/*;
+
   default_type application/octet-stream;
 
   access_log /data/log/nginx/access.log;
