--- a/grafana/config/nginx/elasticsearch.conf
+++ b/grafana/config/nginx/elasticsearch.conf
@@ -2,8 +2,8 @@ server {
   listen 9201 ssl;
   server_name iplayer.io;
 
-  ssl_certificate         /etc/nginx/ssl/server.crt;
-  ssl_certificate_key     /etc/nginx/ssl/server.key;
+  ssl_certificate         /certificates/server.crt;
+  ssl_certificate_key     /certificates/server.key;
 
   location / {
     proxy_pass                 http://0.0.0.0:9200/;
