--- a/grafana/config/nginx/elasticsearch.conf
+++ b/grafana/config/nginx/elasticsearch.conf
@@ -6,7 +6,7 @@ server {
   ssl_certificate_key     /certificates/server.key;
 
   location / {
-    proxy_pass                 http://0.0.0.0:9200/;
+    proxy_pass                 http://elasticsearch:9200/;
     proxy_set_header           X-Real-IP   $remote_addr;
     proxy_set_header           X-Forwarded-For  $proxy_add_x_forwarded_for;
     proxy_set_header           X-Forwarded-Proto  $scheme;
