--- a/grafana/config/nginx/graphite.conf
+++ b/grafana/config/nginx/graphite.conf
@@ -11,7 +11,7 @@ server {
     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
     add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
 
-    proxy_pass                 http://0.0.0.0:8080/;
+    proxy_pass                 http://graphite:8080/;
     proxy_set_header           X-Real-IP   $remote_addr;
     proxy_set_header           X-Forwarded-For  $proxy_add_x_forwarded_for;
     proxy_set_header           X-Forwarded-Proto  $scheme;
