Correct statsd folder

--- a/statsd/Dockerfile
+++ b/statsd/Dockerfile
@@ -5,4 +5,4 @@ COPY    config/config.js ./statsd/config.js
 
 EXPOSE  8125/udp 8126/tcp
 
-CMD     ["node", "statsd/stats.js", "statsd/config.js"]
+CMD     ["node", "./statsd/stats.js", "./statsd/config.js"]
