--- a/statsd/Dockerfile
+++ b/statsd/Dockerfile
@@ -1,8 +1,8 @@
 FROM    dockerfile/nodejs
 
 RUN     git clone git://github.com/etsy/statsd.git statsd
-COPY    config/config.js ./statsd/config.js
+COPY    config/config.js /data/statsd/config.js
 
 EXPOSE  8125/udp 8126/tcp
 
-CMD     ["node", "./statsd/stats.js", "./statsd/config.js"]
+CMD     ["node", "/data/statsd/stats.js", "/data/statsd/config.js"]
