--- a/grafana/config/nginx/seyren.conf
+++ b/grafana/config/nginx/seyren.conf
@@ -1,29 +1,25 @@
 server {
-  listen 9201 ssl;
-  server_name ~^elasticsearch\..*$;
+  listen 443 ssl;
+  server_name ~^seyren.*$;
 
   ssl_certificate         /certificates/server.crt;
   ssl_certificate_key     /certificates/server.key;
+  ssl_client_certificate  /certificates/ca.pem;
+  ssl_verify_client on;
+  ssl_verify_depth 3;
 
   location / {
-    proxy_pass                 http://elasticsearch:9200/;
+    add_header 'Access-Control-Allow-Origin' 'https://iplayer.io';
+    add_header 'Access-Control-Allow-Credentials' 'true';
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
+
+    proxy_pass                 http://seyren:8888/;
     proxy_set_header           X-Real-IP   $remote_addr;
     proxy_set_header           X-Forwarded-For  $proxy_add_x_forwarded_for;
     proxy_set_header           X-Forwarded-Proto  $scheme;
     proxy_set_header           X-Forwarded-Server  $host;
     proxy_set_header           X-Forwarded-Host  $host;
     proxy_set_header           Host  $host;
-
-    client_max_body_size       10m;
-    client_body_buffer_size    128k;
-
-    proxy_connect_timeout      90;
-    proxy_send_timeout         90;
-    proxy_read_timeout         90;
-
-    proxy_buffer_size          4k;
-    proxy_buffers              4 32k;
-    proxy_busy_buffers_size    64k;
-    proxy_temp_file_write_size 64k;
   }
 }
