--- a/grafana/config/nginx/elasticsearch.conf
+++ b/grafana/config/nginx/elasticsearch.conf
@@ -1,6 +1,6 @@
 server {
-  listen 9201 ssl;
-  server_name ~^elasticsearch\..*$;
+  listen 443 ssl;
+  server_name elasticsearch.$hostname;
 
   ssl_certificate         /certificates/server.crt;
   ssl_certificate_key     /certificates/server.key;
