--- a/grafana/config/nginx/grafana.conf
+++ b/grafana/config/nginx/grafana.conf
@@ -1,6 +1,6 @@
 server {
   listen 443 ssl;
-  server_name _;
+  server_name $hostname;
 
   ssl_certificate         /certificates/server.crt;
   ssl_certificate_key     /certificates/server.key;
