--- a/grafana/config/nginx/graphite.conf
+++ b/grafana/config/nginx/graphite.conf
@@ -1,12 +1,12 @@
 server {
   listen 443 ssl;
-  server_name ~^graphite.*$;
+  server_name graphite.$hostname;
 
   ssl_certificate         /certificates/server.crt;
   ssl_certificate_key     /certificates/server.key;
 
   location / {
-    add_header 'Access-Control-Allow-Origin' 'https://iplayer.io';
+    add_header 'Access-Control-Allow-Origin' '*';
     add_header 'Access-Control-Allow-Credentials' 'true';
     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
     add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
