--- a/grafana/config/nginx/seyren.conf
+++ b/grafana/config/nginx/seyren.conf
@@ -1,6 +1,6 @@
 server {
   listen 443 ssl;
-  server_name ~^seyren.*$;
+  server_name seyren.$hostname;
 
   ssl_certificate         /certificates/server.crt;
   ssl_certificate_key     /certificates/server.key;
@@ -9,12 +9,12 @@ server {
   ssl_verify_depth 3;
 
   location / {
-    add_header 'Access-Control-Allow-Origin' 'https://iplayer.io';
+    add_header 'Access-Control-Allow-Origin' '*';
     add_header 'Access-Control-Allow-Credentials' 'true';
     add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
     add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
 
-    proxy_pass                 http://seyren:8888/;
+    proxy_pass                 http://seyren:9000/;
     proxy_set_header           X-Real-IP   $remote_addr;
     proxy_set_header           X-Forwarded-For  $proxy_add_x_forwarded_for;
     proxy_set_header           X-Forwarded-Proto  $scheme;
