--- a/grafana/config/nginx/seyren.conf
+++ b/grafana/config/nginx/seyren.conf
@@ -1,6 +1,6 @@
 server {
   listen 443 ssl;
-  server_name seyren.$hostname;
+  server_name ~^seyren.+$;
 
   ssl_certificate         /certificates/server.crt;
   ssl_certificate_key     /certificates/server.key;
