--- a/grafana/config/nginx/grafana.conf
+++ b/grafana/config/nginx/grafana.conf
@@ -1,5 +1,6 @@
 server {
   listen 443 ssl;
+  server_name *;
 
   ssl_certificate         /certificates/server.crt;
   ssl_certificate_key     /certificates/server.key;
