Add seyren config file to nginx

--- a/grafana/config/nginx/graphite.conf
+++ b/grafana/config/nginx/graphite.conf
@@ -1,6 +1,6 @@
 server {
   listen 443 ssl;
-  server_name graphite.iplayer.io;
+  server_name ~^graphite.+$;
 
   ssl_certificate         /certificates/server.crt;
   ssl_certificate_key     /certificates/server.key;
