--- a/grafana/config/nginx/elasticsearch.conf
+++ b/grafana/config/nginx/elasticsearch.conf
@@ -1,6 +1,6 @@
 server {
   listen 443 ssl;
-  server_name elasticsearch.iplayer.io;
+  server_name ~^elasticsearch.+$;
 
   ssl_certificate         /certificates/server.crt;
   ssl_certificate_key     /certificates/server.key;
