--- a/grafana/config/nginx/elasticsearch.conf
+++ b/grafana/config/nginx/elasticsearch.conf
@@ -5,6 +5,9 @@ server {
   ssl_certificate         /certificates/server.crt;
   ssl_certificate_key     /certificates/server.key;
 
+  auth_basic 'Restricted';
+  auth_basic_user_file /certificates/htpasswd;
+
   location / {
     proxy_pass                 http://elasticsearch:9200/;
     proxy_set_header           X-Real-IP   $remote_addr;
